fix z-indexing of all elements (some were actually hidden through changes in the past)

--- a/app/app.css
+++ b/app/app.css
@@ -2,7 +2,7 @@
 
 /* required to increase drowdown menu z-index in oder to let layer export options overlap menu buttons and map */
 .dropdown-menu {
-	z-index: 7000;
+	z-index: 1000;
 	/* overflow: hidden; */
 }
 
@@ -278,14 +278,14 @@
 
 #header{
 	background: rgb(236,240,245);
-	z-index: 7500;
+	z-index: 1003;
 	border-bottom: 2px solid gray;
 }
 
 #map {
 	height: 94vh;
 	position: relative;
-	z-index: 7001;
+	z-index: 1001;
 }
 
 #legend{
@@ -312,19 +312,19 @@
 #recenterMapButton {
 	left: 80px;
 	top: 10px;
-	z-index: 7500;
+	z-index: 1003;
 }
 
 #unselectFeaturesButton {
 	left: 130px;
 	top: 10px;
-	z-index: 7500;
+	z-index: 1003;
 }
 
 #exportMapButton {
 	left: 180px;
 	top: 10px;
-	z-index: 7500;
+	z-index: 1003;
 }
 
 .leaflet-left .leaflet-control-layers {
@@ -337,7 +337,7 @@
 	/* max-width	: 600px;
 	max-height : 350px; */
 	overflow : auto;
-	z-index: 7500;
+	z-index: 1003;
 }
 
 .leaflet-left .leaflet-control-layers-expanded {
@@ -359,7 +359,7 @@
 	position: absolute;
 	left: 70px;
 	top: 100px;
-	z-index: 7500;
+	z-index: 1003;
 }
 
 .leaflet-left .leaflet-control-search {
@@ -367,7 +367,7 @@
 	position: absolute;
 	left: 70px;
 	top: 50px;
-	z-index: 7500;
+	z-index: 1003;
 }
 
 .leaflet-left .leaflet-control-measure{
@@ -377,7 +377,7 @@
 	position: absolute;
 	left: 70px;
 	top: 150px;
-	z-index: 7500;
+	z-index: 1003;
 }
 
 .leaflet-left .leaflet-control-easyPrint{
@@ -386,7 +386,7 @@
 	/* float: none; */
 	position: absolute;
 	left: 170px;
-	z-index: 7500;
+	z-index: 1003;
 }
 
 .leaflet-control-layers-group-name{
@@ -445,7 +445,7 @@
   margin-left: auto;
   left: 100px;
   right: 20px;
-	z-index: 8000;
+	z-index: 1004;
 	font: 16px/18px Arial, Helvetica, sans-serif;
 	/* border: 2px solid black;
   border-radius: 8px; */
@@ -550,6 +550,10 @@
 
 	align-items: center;
 	justify-content: center;
+}
+
+.modal {
+	z-index: 9999;
 }
 
 select {
@@ -974,7 +978,7 @@ transition: opacity 0.3s;
 	margin-right: 1%;
 	margin-top: 1%;
 	font-size: 12px;
-	z-index: 7000;
+	z-index: 1000;
 	height: 99%;
 	max-height: 99%;
 	overflow: auto;
@@ -985,7 +989,7 @@ transition: opacity 0.3s;
 	margin-right: 1%;
 	font-size: 12px;
 	/* margin-top: 1%x; */
-	z-index: 7000;
+	z-index: 1000;
 	height: 99%;
 	max-height: 99%;
 	overflow: auto;
@@ -996,7 +1000,7 @@ transition: opacity 0.3s;
 	margin-right: 1%;
 	font-size: 12px;
 	/* margin-top: 1%; */
-	z-index: 7000;
+	z-index: 1000;
 	height: 99%;
 	max-height: 99%;
 	overflow: auto;
@@ -1007,7 +1011,7 @@ transition: opacity 0.3s;
 	margin-right: 1%;
 	font-size: 12px;
 	/* margin-top: 1%; */
-	z-index: 7000;
+	z-index: 1000;
 	height: 99%;
 	max-height: 99%;
 	overflow: auto;
@@ -1018,7 +1022,7 @@ transition: opacity 0.3s;
 	margin-right: 1%;
 	font-size: 12px;
 	/* margin-top: 1%; */
-	z-index: 7000;
+	z-index: 1000;
 	/* do not specify height, as this will put a lot of empty space on page*/
 	/* height: 98%; */
 	height: 99%;
@@ -1031,7 +1035,7 @@ transition: opacity 0.3s;
 	margin-right: 1%;
 	font-size: 12px;
 	/* margin-top: 1%; */
-	z-index: 7000;
+	z-index: 1000;
 	height: 99%;
 	max-height: 99%;
 	overflow: auto;
@@ -1042,7 +1046,7 @@ transition: opacity 0.3s;
 	margin-right: 1%;
 	font-size: 12px;
 	/* margin-top: 1%; */
-	z-index: 7000;
+	z-index: 1000;
 	height: 99%;
 	max-height: 99%;
 	overflow: auto;
@@ -1053,7 +1057,7 @@ transition: opacity 0.3s;
 	margin-right: 1%;
 	font-size: 12px;
 	/* margin-top: 1%; */
-	z-index: 7000;
+	z-index: 1000;
 	height: 99%;
 	max-height: 99%;
 	overflow: auto;
@@ -1064,7 +1068,7 @@ transition: opacity 0.3s;
 	margin-right: 1%;
 	font-size: 12px;
 	/* margin-top: 1%; */
-	z-index: 7000;
+	z-index: 1000;
 	/* do not specify height, as this will put a lot of empty space on page*/
 	/* height: 98%; */
 	height: 99%;
@@ -1077,7 +1081,7 @@ transition: opacity 0.3s;
 	margin-right: 1%;
 	font-size: 12px;
 	/* margin-top: 1%; */
-	z-index: 7000;
+	z-index: 1000;
 	height: 99%;
 	max-height: 99%;
 	overflow: auto;
@@ -1092,7 +1096,7 @@ transition: opacity 0.3s;
   line-height: 1.42;
   border-radius: 25px;
 	left: 10px;
-	z-index: 7500;
+	z-index: 1003;
 }
 
 .btn-circle img {
@@ -1116,7 +1120,7 @@ transition: opacity 0.3s;
   color: white;
   border-radius: 0 5px 5px 0;
 	background-color: rgb(236,240,245);
-	z-index: 7500;
+	z-index: 1003;
 }
 
 .btn-docked img {
@@ -1128,7 +1132,7 @@ transition: opacity 0.3s;
 	background-color: #337ab7;
   color: white;
 	position: absolute;
-	z-index: 7500;
+	z-index: 1003;
 }
 
 .btn-custom:hover {
@@ -1136,7 +1140,7 @@ transition: opacity 0.3s;
   color: black;
   border: 2px solid #337ab7;
 	position: absolute;
-	z-index: 7500;
+	z-index: 1003;
 }
 
 .btn-custom:hover img{
@@ -1147,7 +1151,7 @@ transition: opacity 0.3s;
 	background-color: rgb(236,240,245);
   color: black;
 	position: absolute;
-	z-index: 7500;
+	z-index: 1003;
 }
 
 .btn-leaflet-custom{
@@ -1158,7 +1162,7 @@ transition: opacity 0.3s;
 	position: absolute;
 	border: 2px solid rgba(0,0,0,0.2);
 	background-clip: padding-box;
-	z-index: 7500;
+	z-index: 1003;
 }
 
 .btn-leaflet-custom:hover {
@@ -1167,7 +1171,7 @@ transition: opacity 0.3s;
 	border: 2px solid rgba(0,0,0,0.2);
 	background-clip: padding-box;
 	position: absolute;
-	z-index: 7500;
+	z-index: 1003;
 }
 
 /* CUSTOM RANGE SLIDER  */
@@ -1308,7 +1312,7 @@ hr {
   left: 0;
   border-radius: 5px;
   opacity: 0.8;
-  z-index: 7000;
+  z-index: 1000;
 }
 
 .loading-overlay-sidebar .icon-spin {
@@ -1338,7 +1342,7 @@ hr {
   left: 0;
   border-radius: 5px;
   opacity: 0.8;
-  z-index: 7000;
+  z-index: 1000;
 }
 
 .loading-overlay-sidebar-small .icon-spin {
@@ -1368,7 +1372,7 @@ hr {
   left: 0;
   border-radius: 5px;
   opacity: 0.8;
-  z-index: 7002;
+  z-index: 1002;
 }
 
 .loading-overlay .icon-spin {
